[package]
name = "ptarmigan"
version = "0.9.1"
authors = ["tgblackburn"]
edition = "2018"
publish = false
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
mpi = {version = "0.5", optional = true, default-features = false}
rand = "0.7"
rand_xoshiro = "0.4"
rand_distr = "0.2"
meval = "0.2.0"
yaml-rust = "0.4.5"
num-complex = "0.4.0"
enum_dispatch = "0.3"
memoffset = {version = "0.5", optional = true}
hdf5 = {version = "0.8.0", optional = true}
unzip-n = {version = "0.1.2", optional = true}

[features]
default = []
hdf5-output = ["hdf5", "unzip-n"]
with-mpi = ["mpi", "memoffset"]
compensating-chirp = []
cos2-envelope-in-3d = []
leading-order-only = []
enable-plain-text-dump = []

[build-dependencies]
vergen = "4.0.3"

[dev-dependencies]
rayon = "1.5.1"