[package]
name = "ptarmigan"
version = "1.5.0"
authors = ["tgblackburn"]
edition = "2018"
publish = false
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"
rust-version = "1.77"

[dependencies]
rand = "0.7"
rand_xoshiro = "0.4"
rand_distr = "0.2"
evalexpr = "8.1"
yaml-rust = {package = "yaml-rust2", version = "0.10", default-features = false}
num-complex = "0.4"
enum_dispatch = "0.3"
colored = "2"
hdf5-writer = {path = "./hdf5-writer", version = "0.2", optional = true}
unzip-n = {version = "0.1.2", optional = true}
mpi = {version = "0.6", optional = true, default-features = false}
no-mpi = {path = "./no-mpi", version = "0.1"}

[workspace]
members = ["hdf5-writer", "no-mpi"]

[features]
default = []
hdf5-output = ["hdf5-writer", "unzip-n"]
with-mpi = ["mpi", "hdf5-writer?/with-mpi"]
compensating-chirp = []

[build-dependencies]
vergen = {version = "4", default-features = false, features = ["git"]}

[dev-dependencies]
rayon = "1.5.1"
indicatif = {version = "0.17", features = ["rayon"]}
rustfft = "6.1"
