[package]
name = "hdf5-writer"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false

[features]
default = []
with-mpi = ["mpi", "mpi-sys", "hdf5-sys/mpio"]

[dependencies]
hdf5-sys = "0.8"
no-mpi = {path = "../no-mpi", version = "0.1"}
mpi = {version = "0.5", optional = true, default-features = false}
mpi-sys = {version = "0.1", optional = true}
libc = "0.2"
