[package]
name = "hdf5-writer"
version = "0.2.1"
edition = "2018"

[lib]
doctest = false

[features]
default = []
with-mpi = ["mpi", "mpi-sys", "hdf5-sys/mpio"]

[dependencies]
hdf5-sys = {package = "hdf5-metno-sys", version = "=0.9.0"}
no-mpi = {path = "../no-mpi", version = "0.1"}
mpi = {version = "0.6", optional = true, default-features = false}
mpi-sys = {version = "0.2", optional = true}
libc = "0.2"
